testsuite/tests/rename/should_fail/T19843d.hs
module T19843d where

import Prelude (undefined, map)

data Mup k v = Mup k v

foo (Map k v) = undefined
