testsuite/tests/rename/should_fail/T19843d.stderr

T19843d.hs:7:6: error: [GHC-76037]
    Not in scope: data constructor ‘Map’
    Suggested fix: Perhaps use ‘Mup’ (line 5)
